Some things: - Fixed CSS image path again - Added real text to labels and centre aligned - Set minimum window dimensions Now exit confirmation doesn't work??

--- a/src/testjfxapp/TetsawStylesheet.css
+++ b/src/testjfxapp/TetsawStylesheet.css
@@ -1,7 +1,8 @@
 .root{
     -fx-background-color: #1d66b5;
-    -fx-background-image: url("../../../images/TetsawImage.jpg");
+    -fx-background-image: url("/images/TetsawImage.jpg");
     -fx-font: 12pt "Calibri";
+    -fx-text-alignment: center;
     -fx-text-fill: #e9ebf0; /* This */
     -fx-text-inner-color: #e9ebf0; /* This */
     -fx-fill: #e9ebf0; /* And this should be turning the font off-white... But none off them are. */
